--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
   <div class="ads">
     <h2>Lion lens Company</h2>
     <p>Book Paid Video Now</p>
-    <a href="https://loinlens.github.io/Loinlens/">Book Now</a>
+    <a href="https://lionlens.github.io/Loinlens/">Book Now</a>
   </div>
   <div class="copyright">
     <p>©2025 | Designed By team editor Adithya</p></p>
