--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fake Hack — Prank Page</title>
+  <title>Kal Kg Network</title>
   <style>
     :root{--bg:#0b0f14;--accent:#00ff9c;--danger:#ff3860;--muted:#9aa4b2}
     html,body{height:100%;margin:0;font-family:Inter,Segoe UI,Roboto,system-ui,Arial;background:linear-gradient(180deg,#02040a 0%,#071022 100%);color:#d7e3ee}
